# ShadowX

./: .replit  README.md  banner.txt  custom_payloads.txt  dependencies.txt  install.sh  interactive.py  interactive_loxs.py  main.py  pyproject.toml  replit.md  requirements_pip.txt  setup.py
assets/: advanced_payloads.txt  payloads.txt
attached_assets/: Pasted--usr-bin-env-python3-ShadowX-Interactive-CLI-Realistic-XSS-Scanner-Experience-Created-by--1753343306796_1753343306797.txt  Pasted-I-would-like-to-develop-a-professional-XSS-only-vulnerability-scanner-inspired-by-the-structure-and--1753338630537_1753338630538.txt  Pasted-venv-kali-kali-Documents-ShadowX-ShadowX1-python3-main-py-url-https-tubidy-social-se-1753341925539_1753341925541.txt
core/: __init__.py  blind.py  context_engine.py  interactive_scanner.py  report.py  scanner.py
