[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiohttp==3.9.5",
    "beautifulsoup4==4.12.2",
    "colorama>=0.4.6",
    "flask==3.0.3",
    "gitpython==3.1.40",
    "packaging==23.2",
    "prompt-toolkit==3.0.41",
    "pyyaml==6.0.1",
    "requests>=2.32.4",
    "rich>=14.0.0",
    "selenium==4.15.2",
    "urllib3==2.0.7",
    "webdriver-manager==4.0.1",
]
